--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react-bootstrap-datetimepicker",
   "version": "0.0.20",
   "description": "A bootstrap datetime picker component for React.js",
-  "homepage": "http://dev.quri.com/react-bootstrap-datetimepicker/",
+  "homepage": "http://github.com/thethanghn/react-bootstrap-datetimepicker/",
   "repository": {
     "type": "git",
-    "url": "http://github.com/quri/react-bootstrap-datetimepicker"
+    "url": "http://github.com/thethanghn/react-bootstrap-datetimepicker"
   },
   "main": "./lib/DateTimeField.js",
   "scripts": {
