add getValue() to retrieve value on demand

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-bootstrap-datetimepicker",
+  "name": "@thethanghn/react-bootstrap-datetimepicker",
   "version": "0.0.20",
   "description": "A bootstrap datetime picker component for React.js",
   "homepage": "http://github.com/thethanghn/react-bootstrap-datetimepicker/",
